# c-csv-test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c  run.sh  val_debug.sh
data/: AAPL.csv  AAPL_invalid.csv  AAPL_partially_missing.csv  AAPL_unheadered.csv
include/: c-csv-test.h
src/: c-csv-test.c
